--- a/fagpakker/Machine Learning/gymKonf/øvelser/perceptron_Begynder.ipynb
+++ b/fagpakker/Machine Learning/gymKonf/øvelser/perceptron_Begynder.ipynb
@@ -13,78 +13,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vi skal have lavet en funktion der givet en ny vektor markerer den med enten 1 eller -1\n",
+    "Vi skal have lavet en funktion der givet en ny vektor markerer den med enten $1$ eller $-1$\n",
+    "\n",
     "For at gøre dette nemmere deler vi det op i følgende underproblemer.\n",
-    "* Læs data - En funktion er der flytter data ind i nogle variabler. \n",
-    "* Prikprodukts funktion - Givet to vektorer retunerer den prikproduktet.  \n",
-    "* Hypotese funktion  - Givet en vægt vektor et og punkt retunerer den et label\n",
-    "* Find vægt vektoren - Der givet input data retunerer en vægt vektor. \n",
-    "    * Lav hyperplans funktion - Laver et tilfældigt hyperplan i 10 diminsioner \n",
-    "    * Lav opdateringsfunktion. - Givet en vægt vektor, en x vektor og et y label skal den\n",
-    "      retunere en opdateret vægt vektor"
+    "* **Læs data** : En funktion der flytter data ind i nogle variabler. \n",
+    "* **Prikprodukts-funktion** : Givet to vektorer retunerer den prikproduktet.  \n",
+    "* **Vektor sum-funktion**   : Givet to vektorer retunerer den en ny vektor med den parvise sum.  \n",
+    "* **Hypotese-funktion**     : Givet en hjerne vektor og en patient vektor retunerer den en markering\n",
+    "* **Find hjerne vektoren**  : Finder og træner en hjerne vektor\n",
+    "    * **Lav hyperplans funktion** : Laver et tilfældigt hyperplan i 10 diminsioner \n",
+    "    * **Lav opdateringsfunktion**. : Givet en hjerne vektor, en patient vektor og en markering skal den\n",
+    "      retunere en opdateret hjerne vektor"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Har du trykket make a file>make a copy?"
+    "# Har du trykket \"file>make a copy\"?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Vi vil gemme vores data i to variabler"
+    "### Læs Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vores data ligger nu i x og y\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Her skal du ikke gøre noget, men læs koden igennem\n",
     "import data\n",
     "from random import randint\n",
-    "# Lets get the data\n",
-    "xs = data.getXs()\n",
-    "ys = data.getYs()\n",
-    "print \"Vores data ligger nu i x og y\""
+    "# Vi henter dataen. \n",
+    "dataX = data.getXs()\n",
+    "dataY = data.getYs()\n",
+    "print \"Vores data ligger nu i dataX og dataY\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "x er nu en liste af vektorer, altså giver x[0] vektoren [1,5, 1, 1, 1, 2, 1, 3, 1, 1]. \n",
-    "Y er en liste af labels så y[0]=1 hvilket siger at den første person i datasættet har en godartet svulst. "
+    "$dataX$ er nu en liste af vektorer, altså giver $dataX[0]$ vektoren $[1,5, 1, 1, 1, 2, 1, 3, 1, 1]$. \n",
+    "\n",
+    "$dataY$ er en liste af markeringer så $dataY[0]=1$ hvilket siger at den første person i datasættet har en godartet svulst. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Liste funktioner\n",
-    "Her laver vi de liste funktioner vi skal bruge i vores kode. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Prikprodukts funktion\n",
-    "vi skal nu lave en funktion der givet to vektorer retunerer prikproduktet."
+    "---\n",
+    "## Vektor funktioner\n",
+    "Her laver vi de funktioner vi skal bruge i vores kode til at håndtere vektorer. \n",
+    "\n",
+    "### Prikprodukts-funktion\n",
+    "Vi skal nu lave en funktion der givet to vektorer retunerer prikproduktet.\n",
+    "\n",
+    "\n",
+    "Husk at prikproduktet er defineret som: $a_1 * b_1 + a_2 * b_2 + ... + a_n * b_n$  "
    ]
   },
   {
@@ -98,7 +92,7 @@
     "def prikProd(vec1,vec2):\n",
     "    # Vi har ikke regnet noget ud endnu så hvad kunne vi sætte tallet til?\n",
     "    result = _tal\n",
-    "    for index in range(_star, _slut): # Hint: du kan få længden af en liste med len(listeNavn)\n",
+    "    for index in range(_start, _slut): # Hint: du kan få længden af en liste med len(listeNavn)\n",
     "        result += _et_produkt # Hint: du kan få et et tal ud af en liste med listeNavn[index]\n",
     "    return result"
    ]
@@ -109,15 +103,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tallet skulle være x og det var -12\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Lad os teste om den virker\n",
     "a = [1,2,3]\n",
@@ -130,14 +116,17 @@
    "metadata": {},
    "source": [
     "### Sum funktion\n",
-    "Vi skal lave en funktion der givet to lister, ligger hvert element parvis sammen. \n",
-    "Eksempel givet de to liste\n",
-    "a = [1, 2]\n",
-    "b = [3, 4]\n",
-    "Kalder vi så funktionen\n",
-    "c = sumList(a,b) \n",
-    "Skal c så være \n",
-    "c = [4, 6]"
+    "Vi skal lave en funktion der givet to vektorer, ligger hvert element parvis sammen. \n",
+    "\n",
+    "Hvis $a$ og $b$ er vektorer ønsker vi at regne $a + b = [a_1+b_1,a_2+b_2, \\dots, a_n + b_n] $ \n",
+    "\n",
+    "Eksempel givet de to vektorer.\n",
+    "$a = [1, 2]$ og \n",
+    "$b = [3, 4]$\n",
+    "\n",
+    "Skal funktionen give\n",
+    "\n",
+    "$sumVec(a,b) = [4, 6]$\n"
    ]
   },
   {
@@ -148,7 +137,7 @@
    },
    "outputs": [],
    "source": [
-    "def sumList(vec1, vec2):\n",
+    "def sumVec(vec1, vec2):\n",
     "    newList = []\n",
     "    for index in range(_start, _slut):\n",
     "        newElem = _summen_af_de_i'te_elementer\n",
@@ -174,16 +163,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Liste gange funktion\n",
-    "Vi skal bruge en funktion der givet et tal(n) og en liste gange hver element i listen med n. \n",
+    "### Vektor gange funktion\n",
+    "Vi skal bruge en funktion der givet et tal $k$ og en vektor $x$ gange hvert element i $x$ med $k$.\n",
+    "\n",
+    "Ved vektoren $x$ og konstanten $k$ ønsker vi at regne \n",
+    "\n",
+    "$\n",
+    "    gangVec(k,x) = [k*x_1, k*x_2, \\dots k_n] \n",
+    "$\n",
+    "\n",
     "Eksempel:\n",
     "Givet inputtet\n",
-    "n = -2\n",
-    "lst = [1,2,3,4]\n",
-    "Skal et kald til funktionen \n",
-    "lstNew = gangList(n, lst)\n",
-    "gøre sådan at lstNew så såldes ud. \n",
-    "lstNew = [-2,-4,-6,-8]\n"
+    "$k = -2$ og \n",
+    "$vec = [1,2,3,4]$\n",
+    "\n",
+    "Skal et kald til funktionen give:\n",
+    "$gangVec(k, vec) = [-2,-4,-6,-8]$\n"
    ]
   },
   {
@@ -194,7 +189,7 @@
    },
    "outputs": [],
    "source": [
-    "def gangList(n,vec):\n",
+    "def gangVec(n,vec):\n",
     "    newLst = []\n",
     "    for index in range(0,_liste):\n",
     "        newLst.append(_produkt) #Hint append indsætter et i parentesen i en liste\n",
@@ -203,19 +198,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Listen skulle være 2,4,6 og det var [2, 4, 6]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Lad os teste om den virker\n",
     "a = [1,2,3]\n",
@@ -227,8 +214,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "### Lav hyperplan\n",
-    "Vi skal lave vores vægt vektor, den skal have 10 elementer hvor det første er \"1\" og de 9 andre er tilfældige tal mellem 1 og 10. "
+    "Vi skal lave vores hjerne vektor, den skal have 10 elementer hvor det første er $1$ og de $9$ andre er tilfældige tal mellem $1$ og $10$. "
    ]
   },
   {
@@ -255,7 +243,7 @@
    },
    "outputs": [],
    "source": [
-    "# Kan vil lave en random liste\n",
+    "# Kan vil lave en random vektor\n",
     "print makeHyper()"
    ]
   },
@@ -264,12 +252,15 @@
    "metadata": {},
    "source": [
     "### Opdaterings funktion. \n",
-    "Givet en vægt vektor (w) en data vektor(x) den har market forkert og den rigtige markeing (y) skal den opdatere vægt vektoren så den lærer fra sin fejl. \n",
+    "Givet en hjerne vektor $w$ en patient vektor $x$ som er market forkert,\n",
     "\n",
-    "Det skal gøres såldes\n",
-    "w = w + y * x\n",
+    "skal den opdatere hjerne vektoren så den lærer fra sin fejl. \n",
     "\n",
-    "Vink, du har lavet funktioner til dette"
+    "Det gøres med denne formel hvor $y$ er den rigtige markering. \n",
+    "\n",
+    "$w = w + y * x$\n",
+    "\n",
+    "*Vink, du har lavet funktioner til dette*"
    ]
   },
   {
@@ -282,8 +273,8 @@
    "source": [
     "def update(w,x,y):\n",
     "    # Hint: Brug de funktioner du lige har lavet\n",
-    "    wNew = _to_lister_ganget_sammen\n",
-    "    wNew = _to_liste_lagt_sammen\n",
+    "    wNew = _to_vektorer_ganget_sammen\n",
+    "    wNew = _to_vektorer_lagt_sammen\n",
     "    return wNew"
    ]
   },
@@ -293,10 +284,14 @@
    "source": [
     "### Hypotese funktion. \n",
     "Vi skal nu lave vores hypotese funktion. \n",
-    "Den skal givet en vægtvektor(w) og en data vektor(x) skal den retunere en markering, altså \n",
-    "1 eller -1.\n",
     "\n",
-    "Lablet bestemmes ved at tage prikproduktet af de to vektorer og retunere 1 hvis det er større eller lig med nul og ellers retunerer -1"
+    "Givet en hjerne vektor $w$ og en data vektor $x$ skal den retunere en markering $1$ eller $-1$.\n",
+    "\n",
+    "Markeringen bestemmes ved at tage prikproduktet af de to vektorer. \n",
+    "\n",
+    "Retunerer $1$ hvis prikproduktet er større eller lig med nul.\n",
+    "\n",
+    "Ellers retunerer $-1$"
    ]
   },
   {
@@ -319,9 +314,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Find vægt vektoren\n",
-    "Vi skal nu skrive kernen i vores alogorimte og bruge alle vores hjælpe funktioner. \n",
-    "Givet liste af data vektor (x) og en liste af markeringer (y) skal vi retunere den rigtige vægt vektor. \n",
+    "# Find hjerne vektoren\n",
+    "Vi skal nu skrive kernen i vores alogorimte og bruge alle vores hjælpefunktioner.\n",
+    "\n",
+    "\n",
+    "Givet liste af data vektorere $xs$ og en liste af markeringer $ys$ skal vi retunere den rigtige hjerne vektor. \n",
     "\n",
     "Trinene skal være. \n",
     "1. Sæt w til en tilfældig vektor. \n",
@@ -333,18 +330,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def findWeight(x,y):\n",
+    "def findBrain(xs, ys):\n",
     "    w = _et_hyper_plan\n",
     "    isLearning = True\n",
     "    while(isLearning == True):\n",
     "        isLearning = False\n",
-    "        for i in range(len(x)):\n",
+    "        for i in range(len(xs)):\n",
     "            if(_hypo != _rigtig_svar): #Hint: hvad er y? \n",
     "                w = _updateret_w \n",
     "                isLearning = True\n",
@@ -353,21 +350,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[201, -24, 38, -45, -98, 59, 15, -1, -21, 90]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "w =  findWeight(xs,ys)\n",
+    "w =  findBrain(dataX,dataY)\n",
     "print \"Du har lavet hjernevektoren: \", w"
    ]
   },
