--- a/fagpakker/Machine Learning/uge3/øvelser/perceptron_Begynder.ipynb
+++ b/fagpakker/Machine Learning/uge3/øvelser/perceptron_Begynder.ipynb
@@ -83,17 +83,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
    "source": [
     "def prikProd(u,v):\n",
-    "    result = _tal\n",
-    "    for _ting in range(_star, _slut):\n",
-    "        result += _et_produkt\n",
-    "    return result"
+    "    result = 0\n",
+    "    for i in range(0, len(u)):\n",
+    "        result += u[i] * v[i]\n",
+    "    return result\n",
+    "\n",
+    "a = [1,2]\n",
+    "b = [3,4]\n",
+    "print prikProd(a,b)"
    ]
   },
   {
