--- a/fagpakker/Machine Learning/ATU/mLøvelser/perceptron_Begynder.ipynb
+++ b/fagpakker/Machine Learning/ATU/mLøvelser/perceptron_Begynder.ipynb
@@ -156,7 +156,7 @@
     "# Lad os teste om den virker\n",
     "a = [1,2,3]\n",
     "b = [4,5,6]\n",
-    "print \"Tallet skulle være 21 og det var \" + str(sumList(a,b)) "
+    "print \"Listen skulle være [5, 7, 9] og det var \" + str(sumVec(a,b)) "
    ]
   },
   {
@@ -207,7 +207,7 @@
     "# Lad os teste om den virker\n",
     "a = [1,2,3]\n",
     "b = 2\n",
-    "print \"Listen skulle være 2,4,6 og det var \" + str(gangList(b,a))"
+    "print \"Listen skulle være 2,4,6 og det var \" + str(gangVec(b,a))"
    ]
   },
   {
@@ -397,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
