--- a/events/kulturnat-2017/presentation/presentation.tex
+++ b/events/kulturnat-2017/presentation/presentation.tex
@@ -11,14 +11,15 @@
   \maketitle
   \begin{frame}{}
     \center Hvad vil det sige at \textcolor{Goldenrod}{eje} en bitcoin?
+    \center ...og hvorfor rager det egentligt dig?
   \end{frame}
   \begin{frame}{}
-    \center \textcolor{blue}{Digital signatures}, \textcolor{Magenta}{Proof of work}, \center \textcolor{SpringGreen}{Cryptographic hash functions}...
+    \center \textcolor{blue}{Digital signatures}, \textcolor{Magenta}{Proof of work}, \center \textcolor{SpringGreen}{Cryptographic hash functions}...
   \end{frame}
-  \begin{frame}{}
+  [M@[M@\begin{frame}{}
     \center Hvorfor er Blockchain så \textcolor{SeaGreen}{komplekst}?
   \end{frame}
-  \begin{frame}{}
+  \begin{frame}{l det sige at \textcolor{Goldenrod}{eje} en bitcoin?}
       \center "For every complex problem there is an answer that is clear,
 			   simple, and \textcolor{red}{wrong}." \textemdash \ H. L. Mencken
   \end{frame}
@@ -30,10 +31,12 @@
 	\center ...hvor \textcolor{red}{tredjepart} $\in$ \{stat, bank, osv.\}
   \end{frame}
   \begin{frame}{}
-	\center Kan mellemledet omgås?
+  \center Åh åhhh...
   \end{frame}
   \begin{frame}{}
 	\center Blockchain to the rescue!
+  \end{frame}
+  \begin{frame}{}
   \end{frame}
   \begin{frame}{}
     \begin{figure}[ht!]
