--- a/events/kulturnat-2017/presentation/presentation.tex
+++ b/events/kulturnat-2017/presentation/presentation.tex
@@ -6,6 +6,7 @@
 \usepackage{xcolor}
 \usepackage[normalem]{ulem}
 \usepackage{varwidth}
+\usepackage{listings}
 \DeclareRobustCommand{\hsout}[1]{\texorpdfstring{\sout{#1}}{#1}}
 \newcommand\teacher[1]{\begin{flushright}\small\textit{#1}\end{flushright}}
 
@@ -17,10 +18,10 @@
   \maketitle
   \section{Motivation}
   \begin{frame}{Motivation}
-    \center Hvad vil det sige at \textcolor{Goldenrod}{eje} en bitcoin?
+    \center Hvad vil det sige at \textcolor{BurntOrange}{eje} en bitcoin?
   \end{frame}
   \begin{frame}{Motivation}
-    \center \textcolor{blue}{Digital signatures}, \textcolor{Magenta}{Proof of work}, \center \textcolor{SpringGreen}{Cryptographic hash functions}, Assymetric Cryptopgraphy...
+      \center \textcolor{BlueViolet}{Digital signatures}, \textcolor{Magenta}{Proof of work}, \center \textcolor{SpringGreen}{Cryptographic hash functions}, \textcolor{Emerald}{Assymetric Cryptopgraphy}...
   \end{frame}
   \begin{frame}{Motivation}
     \center Hvorfor er Blockchain så \textcolor{SeaGreen}{komplekst}?
@@ -49,19 +50,19 @@
     \end{figure}
   \end{frame}
   \begin{frame}{Motivation}
-    \center Tillid mellem to parter afhænger af en \textcolor{red}{tredjepart}!
+    \center Tillid mellem to parter afhænger af en \textcolor{RubineRed}{tredjepart}!
   \end{frame}
   \begin{frame}{Motivation}
-    \center Udfordring:
-      \center lav et system hvor vi kan overføre penge uden at stole på banken
+      \center \textcolor{BrickRed}{Udfordring}:
+      \center lav et system hvor vi kan overføre penge \\ uden at stole på banken
   \end{frame}
   \begin{frame}{Motivation}
-      \center Udfordring:
-      \center \sout{lav et system hvor vi kan overføre penge uden at stole på banken}
-      \center vedligehold en hovedbog uden hjælp udefra
+      \center \textcolor{BrickRed}{Udfordring}:
+      \center \sout{lav et system hvor vi kan overføre penge \\ uden at stole på banken}
+      \center vedligehold en hovedbog uden hjælp fra en tredjepart
   \end{frame}
   \begin{frame}{Motivation}
-	\center Blockchain to the rescue!
+      \center \textcolor{Dandelion}{Blockchain} to the rescue!
   \end{frame}
   \section{Mapper med papirer \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \small Jargon: Distributed ledger}
 
@@ -122,8 +123,8 @@
   \end{frame}
   \begin{frame}{Magiske maskiner}
     \begin{align*}
-        Input &\to Output: nemt \\
-        Output &\to Input: (ekstremt) \ svært
+        \text{\textcolor{LimeGreen}{Input}} &\to \text{\textcolor{OrangeRed}{Output}}: nemt \\
+        \text{\textcolor{OrangeRed}{Output}}&\to \text{\textcolor{LimeGreen}{Input}}: (ekstremt) \ svært
     \end{align*}
   \end{frame}
   \section{Forsegling  \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \small Jargon: Mining $\to$ Proof of work}
@@ -179,10 +180,10 @@
   \end{frame}
   \begin{frame}{Underskrifter}
       \begin{align*}
-          \#1 &\to 1EJFbCLBiq9BNf5MZeXTGbPDdwnG2bDqtX\\
-          \#2 &\to 144burjrm7iqDt6q1LBpZ4oDwxd3Ln95yp\\
-          \#3 &\to 1Kj5hMdZyEV46FDSfmqebvZemRqeJ6t2y5\\
-          \#4 &\to ...
+      \textcolor{Orchid}{\#1} &\to \mathtt{1EJFbCLBiq9BNf5MZeXTGbPDdwnG2bDqtX}\\
+          \textcolor{ProcessBlue}{\#2} &\to \mathtt{144burjrm7iqDt6q1LBpZ4oDwxd3Ln95yp}\\
+          \textcolor{JungleGreen}{\#3} &\to \mathtt{1Kj5hMdZyEV46FDSfmqebvZemRqeJ6t2y5}\\
+          \textcolor{BlueViolet}{\#4} &\to ...
       \end{align*}
   \end{frame}
   \begin{frame}{Underskrifter}
@@ -199,7 +200,7 @@
   \end{frame}
 \section{Blockchain}
   \begin{frame}{Blockchain}
-      \center Papirer $+$ Mapper $+$ Segl $+$ Hæfteklammer $=$ Blockchain
+      \center \textcolor{Emerald}{Papirer} $+$ \textcolor{CarnationPink}{Mapper} $+$ \textcolor{Blue}{Segl} $+$ \textcolor{Green}{Hæfteklammer} $=$ \textcolor{Dandelion}{Blockchain}
   \end{frame}
   \begin{frame}{}
     \center \huge Tak for i aften! \\
