--- a/events/Studiepraktik2016/algoritmerAndenTime.tex
+++ b/events/Studiepraktik2016/algoritmerAndenTime.tex
@@ -16,7 +16,7 @@
 \usepackage{algpseudocode}
 \usepackage{algorithm}
 
-\title{Studiepraktik 2016}
+\title{Studiepraktik 2017}
 \subtitle{Algoritmer og problemløsning}
 \author{
         Arinbjörn Brandsson \\
@@ -93,7 +93,7 @@
         signal og en nøglering der kan sende et signal.
     \end{block}\pause
       \begin{block}{Mål}
-        Hvordan kan vi gøre den sikker? Hvilke skal ``Computeren'' i
+        Hvordan kan vi gøre den sikker? Hvad skal ``Computeren'' i
         nøgleringen kunne?
       \end{block}
       \pause
