Updated bitcoin oplæg

--- a/events/kulturnat-2017/presentation/presentation.tex
+++ b/events/kulturnat-2017/presentation/presentation.tex
@@ -10,8 +10,8 @@
 \DeclareRobustCommand{\hsout}[1]{\texorpdfstring{\sout{#1}}{#1}}
 \newcommand\teacher[1]{\begin{flushright}\small\textit{#1}\end{flushright}}
 
-\title{Blockchain: Pizza til \hsout{\$21.000.000} \$26.000.000}
-\date{13. Oktober, 2017}
+\title{Blockchain: Pizza til \$28.000.000}
+\date{\today}
 \author{mathias@fleig.io}
 \institute{Datalogisk Institut \\ Københavns Universitet}
 \begin{document}
